--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-heroicons": "^4.0.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^14.1.0"
   },
   "devDependencies": {
