--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@svgr-iconkit/heroicons": "^0.3.2",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~49.0.15",
+    "expo-linear-gradient": "^12.5.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
